--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@kinde-oss/kinde-auth-nextjs": "^1.8.21",
+    "@pinecone-database/pinecone": "^1.1.1",
     "@prisma/client": "5.3.1",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -25,11 +26,15 @@
     "@trpc/react-query": "^10.38.5",
     "@trpc/server": "^10.38.5",
     "@uploadthing/react": "^5.6.2",
+    "ai": "^2.2.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "langchain": "^0.0.165",
     "lucide-react": "^0.279.0",
     "next": "latest",
+    "openai": "^4.12.1",
+    "pdf-parse": "^1.1.1",
     "react": "latest",
     "react-dom": "latest",
     "react-dropzone": "^14.2.3",
