--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@kinde-oss/kinde-auth-nextjs": "^1.8.21",
+    "@mantine/hooks": "^7.1.3",
     "@pinecone-database/pinecone": "^1.1.1",
     "@prisma/client": "5.3.1",
     "@radix-ui/react-dialog": "^1.0.3",
@@ -40,10 +41,12 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-markdown": "^9.0.0",
     "react-pdf": "^7.5.0",
     "react-resize-detector": "^9.1.0",
     "react-textarea-autosize": "^8.5.3",
     "simplebar-react": "^3.2.4",
+    "stripe": "^13.10.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^5.7.1",
